--- a/Final Project/finalproject/pom.xml
+++ b/Final Project/finalproject/pom.xml
@@ -16,6 +16,13 @@
             <version>4.12</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>mysql-connector-java-8.0.19</groupId>
+            <artifactId>mysql-connector-java-8.0.19</artifactId>
+            <scope>system</scope>
+            <version>1.0</version>
+            <systemPath>${basedir}\src\libs\mysql-connector-java-8.0.19.jar</systemPath>
+        </dependency>
     </dependencies>
     <build>
         <pluginManagement>
